@@ -4,16 +4,22 @@ Hash: SHA256
 DIST raspberrypi-image-3.10.11_pre-r20130907.tar.xz 55228704 SHA256 98646c18b5c7159207766477d2a0dff9656acda83439fee9dbbdab52ec74a37c SHA512 86a02641dcd369c1ec02f3e7177b81eb1105721c221c3ba91293e08ba61630759a041f7d0418cb3d1c6d9e5326a50889dc69aa626cc910d4be5d91e4338063fd WHIRLPOOL 28cba022835730f9c77f7eb5d2ef60542a3266d27e32836cb666506c0b85505e98e0ee00e8446a1155d061e930dd43843dc90f8136aa84da32319e5922135214
 DIST raspberrypi-image-3.10.24_pre-r20131212.tar.xz 10686516 SHA256 0e9b4af7ccfdb9a9b80d3a0996bdd522670c00412af3dd5b301fc47c2ddeaa50 SHA512 5001ac5722e91528a1c8fd83fc775afaa5d0917d4b19e0b07870c34b102de0ccae6f52eb734e2ec7f2a84fa6a6b47c1852de505382e6027a5c048dc310f7d961 WHIRLPOOL 531ae1c94bd4c0e71eb954dce64c7b8ac50e63447c2e9ad19802280b0ac26acf43f6df0eb3269563866d57a66d03e18e95fb5290e03ec43babbc2ff05047af46
 DIST raspberrypi-image-3.11.2_pre-r20130926.tar.xz 79865684 SHA256 eeae75b7b3d0186317945f0ea32310bab99be05ba2cb0fa9d1ca987bd3f97c79 SHA512 f9158a123c34b5a52430f426df614b5ecea11ac2a6513e323566d86496a4a1bfb36c4b5b905cf22cd99ffae797386280150d308eebc076a57dc2c1c2d8867c0f WHIRLPOOL 9f9958376b62e2438fd2e8ef5da259e64c92f4fd6ce68fe2f0ea1a2fb2eb2b5112c8db1d974df18adddc60d593895c26e38e5f163c5e4b1c0775528fe68ecf25
+DIST raspberrypi-image-3.12.36_pre-r20150206.tar.xz 11038896 SHA256 999db53f2b0293de377db5b4fbe00a3990a0e29f4eece1c145c2a921edbfddeb SHA512 c0254bb1da52651ef6d308b3204397c441f4bf8f6272cceefde0fa1e755397b252be55d2e7e397b352b319722d9195c0b9b7fed8ae301da4fa4c0d2c04618d7c WHIRLPOOL 20e0b529bcc01902ed453b8e6f0ae152a38e61ae6b07a95e398f830a98c8d199b574ca15b46728b683139a288a5f6eabcc8a08e75c007bd5a3e1fb53263c5d46
+DIST raspberrypi-image-3.18.10_pre-r20150330.tar.xz 12976572 SHA256 ea35d0a90b06951e5919ec5a5918291e1ad1c26fb486b103b4be6f6232126556 SHA512 4a9f3ea141a4135d890d6e52867f533293f9ec9237f5be370674599f17cf4edc626ab38de5e493ae0b013e8768eaf5126b2e18662e40cb5cd4587b49ffe8547a WHIRLPOOL a88dcefdd785a68f88f8d882f7e516eb857670dae11150f2000551f9adb316b35cf17f584bce228602e5a518cbbc46c81c65e74d738cf1b5b0c24e95c26e373b
+DIST raspberrypi-image-3.19.3_pre-r20150327.tar.xz 12973956 SHA256 c1025b57a2423a1c2d98c136a5e332139a6734b2ddb3a605526c62d51ba1000d SHA512 5293ff2b75dc6f38f0e4dea5bb8322fdae9a799a1dc2e7f9791d8383e70e2ed39131a8e211514f74d72266b2570c8707abb735905a97f0ecf1c4ca595ac99fd6 WHIRLPOOL 0ef71e26e52014e4fba91edad94fb8bda315ecddf16108c713c4a2303e8a61de2df5626d41c2b45f7b7812252893d74fbb86c28ae1f85eb0441746924598ec93
 EBUILD raspberrypi-image-3.10.11_pre-r20130907.ebuild 837 SHA256 b5d690619351b8df3e2293d6966ee29f3e5edd6e8b54ab930a0b0341a43ba3f7 SHA512 66e12805f4cf02e8dc5eac5c480f2fc25b885a9a6cd22871470b2b6ac1d799835e3c99eac47ffaa5097fa43d6f5830f0c95e27372734444119628cd203aa135c WHIRLPOOL d0198617aa39cd11d62a59892776bab55422e8fdf75d601a8b0b0c64cbae85d58a28c9a8c90a66acf715ca301cd2cff2064fabde65f37d5675945224f01d75b8
 EBUILD raspberrypi-image-3.10.24_pre-r20131212.ebuild 837 SHA256 fae690bbcab7f95f59552e5bddcb947f445d1d181dce232960eb1ed2001cccaa SHA512 21ad90211642e5f4b511e36f728ed0cdeee8142b75f88c10b41d8f50d22bd4f662714168a7033ad9b868ae08880b1688e9564ed7e2417c0f49623665cad63197 WHIRLPOOL 9e8770050dff32f62bade25951df257cc129771ecd2f5482f5774d083f9542d12e729bd93abe053c8e7e6919428a6995370d3b837639c38eb5de627c4d7baf64
 EBUILD raspberrypi-image-3.10.9999.ebuild 1064 SHA256 04b3e5610279cf747a3204f1d2eb10e2d18dc12196adff1d86d14bbb76b2956d SHA512 2e379eb5295d0c97c2036a8d909217cc3a1dccb88d33c775d049c3fd350c4144132c69b4b7c33a8b7b37cdad89d837c887b4c8bd3a5eb306e5de5d4db48f5da9 WHIRLPOOL 211e65a5c6b9d1772415bf4c659a215386eb10f9f6745f5bc00c1a935dfc2e238e1edfe7d250df89c7e1391a135a053c50c14105c5d10e6886e044aa84632869
 EBUILD raspberrypi-image-3.11.2_pre-r20130926.ebuild 836 SHA256 5e046f9c67c46d3c7c79ca920df10f1065c614b434446857a0d43e80d1edb23f SHA512 ac10f3cb3d09a76c0b17f195b9d735877b490e2366d92f6e99cc13dae9fe00eeb8e73b589d254d0c375f23bb6045658dca0e472e8f35383cf80016b59db3911e WHIRLPOOL 0fbfc460961b69da72f8276710888ccefd4a4dcd764b081d3dc0c0147934901b18b9d12de8fb88f273c3b8fe635a935bc249d06e2b348a575c0a4f5c48877ec2
-MISC ChangeLog 4892 SHA256 7f0a482f61700ece92a739e492176011209db0cca857cdc9584659e8ee52302c SHA512 dd8801a3a5f8f42c956a9a49e66d2161298e4e024906abbbf2ee27cdbe16e196947ac93382455a7822d83f34a4b94700d50dcdcedec0ee78d609c4dfc1d10447 WHIRLPOOL ed0e2ba4c1eb24e05e307d23a8ac5344b39a4399aadeab1d547a06e903eabaaf040f18293df07e9d2732439b71ef5a683e9e7202a176c5779673cd785cd89705
+EBUILD raspberrypi-image-3.12.36_pre-r20150206.ebuild 837 SHA256 9ce9c8fb79c0bb189254451ce507f3972b62d9658b8258351bf7e201d6b680da SHA512 f7dfdfe0ef2e501eb5db47fc9c1f0a5778f88474b7b23643cf1fe1e7b82196fee68f0a1515dd12fda6a81a4a67703675f4c5316975768df174c36c57db79699f WHIRLPOOL 283b888964ff7f589c0dcb15d6cdb3543bd3027175224f60187ba379d860bdbc3f867f5143d8384db59e2ee3b603efa88d09d4a3c77c1488e5d8526d6ab11ab5
+EBUILD raspberrypi-image-3.18.10_pre-r20150330.ebuild 837 SHA256 9d6930366d8e58d30344e3e2aa28febd7a8738de287e8b62dc5fc36245aa96e8 SHA512 316874cb4a48b1881c8a71814b6a1263ac39504111a10a3cca1dfd6413c7940443d5ac87c7a4bb92e884ceb5560ac6d3cbab54877d833fcb37a184610ca3fa0d WHIRLPOOL 5557b1338fd10d952cb69a724a730f069ed733f5e13fba74cdf2cf9c0589dac62281e3ac9bc7f829dbf367cc1d913800e1cd892e08595f8accb3a1ad56c7c907
+EBUILD raspberrypi-image-3.19.3_pre-r20150327.ebuild 836 SHA256 f4102f6981b3e174a12cb2287fbe588212864318199462366a36f3f4d6b0604e SHA512 b6f9114b84f6e1892da3880182ed3c292403c76beee33bfefaa3f93061bcced43c02ef8e44b9b6d4158c1aa452c14c11a4e492c005ea48cd51eb9945ff2985a3 WHIRLPOOL 6fd631d2df07d292801cc539b4211c07ea2cbed5523b78c1bb14357541d859634ec69297cc75fbd4bd2bc4fcd15234f6dc2e2e9f3aa8cfd4b99f75902a86cd3b
+MISC ChangeLog 5271 SHA256 8f46631f1b82f3dbe81e595eb641366778ffe5ac2de50c182effbe5c64c6e3f0 SHA512 01f5dacb153bd769aba69e68eb90107363c374b6af781202cc86927d9b80e25f1f44b10cf97391b3bfcc06e7059071cbc1104fd1f5a53bc8bfcf8ba0416c9c49 WHIRLPOOL 6e61f824df00c6901aa32ac125a95275c765cef03f2a04455ceef4cb5795851efe97e74acd7c2e3a6c4dd270499802941b738bccfd6697ce11879d89086ba4e2
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUbPCEACgkQknrdDGLu8JA03AD/ZSD1KFfRGsnR8N6TM83WvNdj
-SQtoRrCGcT2eAaGAzosA/35xkIuS3VpuU+hKXZSyRxS8GRXj1BEgjRaW82GMvsbu
-=53vJ
+iF4EAREIAAYFAlUcAg8ACgkQknrdDGLu8JCR7gD9F0dJW96sd6qKD058l4daee1L
+44vQxqf8J0kSvhi6anwA/1EptmpBhNnniGCjBb+uOyT3bnlwPuGAWh17xzojxctR
+=8xcD
 -----END PGP SIGNATURE-----
