@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/raspberrypi-image
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/raspberrypi-image/ChangeLog,v 1.19 2015/04/01 00:30:21 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/raspberrypi-image/ChangeLog,v 1.20 2015/04/01 14:34:52 xmw Exp $
+
+*raspberrypi-image-3.18.10_pre-r20150330 (01 Apr 2015)
+*raspberrypi-image-3.19.3_pre-r20150327 (01 Apr 2015)
+*raspberrypi-image-3.12.36_pre-r20150206 (01 Apr 2015)
+
+  01 Apr 2015; Michael Weber <xmw@gentoo.org>
+  +raspberrypi-image-3.12.36_pre-r20150206.ebuild,
+  +raspberrypi-image-3.18.10_pre-r20150330.ebuild,
+  +raspberrypi-image-3.19.3_pre-r20150327.ebuild:
+  Version bump
 
   01 Apr 2015; Michael Weber <xmw@gentoo.org>
   -raspberrypi-image-3.6.11_p20130730.ebuild,
